--- a/WolvenKit.CLI/changelog.txt
+++ b/WolvenKit.CLI/changelog.txt
@@ -1,6 +1,7 @@
 ﻿v 1.3.6
 - added cr2w serialization and deserialization to/from json and xml
 - fixed some bugs related to the archivemanagers
+- added a user_hashes.txt file to parse additional hashes
 
 v 1.3.5
 - added compress option to the oodle command in the CLI
