Squashed commit of the following:
commit 53032c3aef6a64d98b20d45bf02c34a378134084
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 17:40:40 2021 +0200

    bugfixes, version bump

    - fixed a bug where bin (unknown hash) files were not packed correctly

commit 52fe8a81cb027538510f2666e996ab3c88360782
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 16:27:30 2021 +0200

    fix set value bug

commit ef40b7e76794dfd5c299200aa9cbd2fd25c6d996
Author: rfuzzo <r.fuzzo@gmail.com>
Date:   Thu Jul 1 15:34:33 2021 +0200

    Update CommonFunctions.cs

--- a/WolvenKit.CLI/changelog.txt
+++ b/WolvenKit.CLI/changelog.txt
@@ -1,3 +1,6 @@
+v 1.4.4
+- fixed a bug where bin (unknown hash) files were not packed correctly
+
 v 1.4.3.1
 - fixed a bug where importing would not detect raw files
 
