Implemented more methods for Red4Reader/Red4Writer

--- a/WolvenKit.RED4.Types/TODO.txt
+++ b/WolvenKit.RED4.Types/TODO.txt
@@ -1,4 +1,5 @@
 - Unify type names...
 - CStatic -> CStaticArray
+- Split CEenum into CEnum and CBitField
 - Custom props
 - Check what really needs to be here, what can move to WolvenKit.Core
