--- a/WolvenKit.RED4.Types/TODO.txt
+++ b/WolvenKit.RED4.Types/TODO.txt
@@ -2,6 +2,11 @@
 - CStatic -> CStaticArray
 - Check what really needs to be here, what can move to WolvenKit.Core
 - Clean up the interfaces -.-
+- CR2WWriter.File.SetParent / Find better way for parentId
+
+- Why can struct CName be null?
 
 - Read_smartobjects
 - Read_streamingsector
+
+- Dumper animFacialSetup, skip 2 after CorrectivePosesData
