--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -24,6 +24,9 @@ Implemented:
 - Added JsonSerializer for CR2WFile/Package04
 - add oodle compression for non-windows systems
 - add texconv as library instad of submodule
+- Updated RTTI classes
+- More filepaths
+- 1.5 game patch support
 
 Fixed:
 - Lots of bug fixes
@@ -43,6 +46,7 @@ Fixed:
 - Fixed csv import
 - Fixed masklist writing for PNG exports
 - Changed default export format for mlmask from DDS to PNG
+
 
 WolvenKit 8.4.3
 -----------------
