--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,13 @@
+WolvenKit 8.5.2
+-----------------
+- fixed a bug where the app would crash when launching the first time
+- better error logging
+- fixed a bug where non-windows libraries were loaded on windows
+
+WolvenKit 8.5.1
+-----------------
+- fixed a bug where the settingspage would not load
+
 WolvenKit 8.5
 -----------------
 
